# server/main/kotlin/ch/yass/game/api/PlayCardRequest.kt
@@ -1,8 +1,8 @@
 package ch.yass.game.api
 
 import ch.yass.core.valiktor.isRank
+import ch.yass.core.valiktor.isSkin
 import ch.yass.core.valiktor.isSuit
-import org.valiktor.functions.isIn
 import org.valiktor.functions.isNotNull
 import org.valiktor.functions.matches
 import org.valiktor.functions.validate
@@ -21,7 +21,7 @@ data class PlayCardRequest(
             validate(PlayCardRequest::card).validate {
                 validate(PlayedCard::suit).isNotNull().isSuit()
                 validate(PlayedCard::rank).isNotNull().isRank()
-                validate(PlayedCard::skin).isNotNull().isIn("french") // TBD
+                validate(PlayedCard::skin).isSkin()
             }
         }
     }
