# server/main/kotlin/ch/yass/game/api/PlayedCard.kt
@@ -3,5 +3,5 @@ package ch.yass.game.api
 data class PlayedCard(
     val suit: String,
     val rank: String,
-    val skin: String,
+    val skin: String? = null,
 )
