# server/main/kotlin/ch/yass/game/dto/Card.kt
@@ -5,14 +5,14 @@ import ch.yass.game.api.PlayedCard
 data class Card(
     val suit: Suit,
     val rank: Rank,
-    val skin: String,
+    val skin: Skin = Skin.DEFAULT,
 ) {
     companion object {
         fun from(card: PlayedCard): Card {
             return Card(
                 Suit.valueOf(card.suit),
                 Rank.valueOf(card.rank),
-                card.skin,
+                Skin.valueOf(card.skin ?: Skin.DEFAULT.name),
             )
         }
 
