# server/main/kotlin/ch/yass/game/dto/CardOnTable.kt
@@ -3,6 +3,6 @@ package ch.yass.game.dto
 data class CardOnTable(
     val suit: Suit,
     val rank: Rank,
-    val skin: String,
+    val skin: Skin,
     val position: Position,
 )
