# server/main/resources/openapi-spec.yaml
@@ -579,10 +579,14 @@ components:
         rank:
           $ref: '#/components/schemas/Rank'
         skin:
-          type: string
+          $ref: '#/components/schemas/Skin'
         state:
           type: string
           enum: [ PLAYABLE, UNPLAYABLE, ALREADY_PLAYED ]
+      required:
+        - suit
+        - rank
+        - state
 
     CardOnTable:
       type: object
@@ -592,7 +596,7 @@ components:
         rank:
           $ref: '#/components/schemas/Rank'
         skin:
-          type: string
+          $ref: '#/components/schemas/Skin'
         position:
           $ref: '#/components/schemas/Position'
 
@@ -616,7 +620,22 @@ components:
 
     Rank:
       type: string
-      enum: [ SIX, SEVEN, EIGHT, NINE, TEN, JACK, QUEEN, KING, ACE, HELLO ]
+      enum: [ SIX, SEVEN, EIGHT, NINE, TEN, JACK, QUEEN, KING, ACE, WELCOME ]
+
+    Skin:
+      type: string
+      enum: [
+        DEFAULT,
+        NATURE_MOUNTAIN01,
+        BETA_HELMETKING01,
+        FESTIVE_HALLOWEEN01,
+        SLANG_HOLZSTOCK01,
+        MESSAGE_GOODLUCK01,
+        MESSAGE_GOODLUCK02,
+        BOT01,
+        BOT02,
+        BOT03,
+      ]
 
     Trump:
       type: string
